--- a/js/plugins/footer/footer.css
+++ b/js/plugins/footer/footer.css
@@ -1,8 +1,13 @@
 .ms-footer{
+    background-color: #000000;
     margin-top: 50px;
     padding-top: 30px;
     text-align: center;
-    color: #5C9FB4;
-    margin-bottom: 30px;
-    border-top: 1px solid #5C9FB4;
+    color: #FFFFFF !important;
+    margin-bottom: 0px !important;
+    border-top: 1px solid #000000;
+}
+
+.ms-footer img{
+    width: 400px;
 }
